Split project into 2 submodules